// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorsFromImagePin with previewColorName & previewColorNumber should match snapshot 1`] = `
<Fragment>
  <button
    className="pin--preview__wrapper pin__wrapper "
    onClick={[MockFunction]}
    style={
      Object {
        "transform": "translate(0px, 0px)",
      }
    }
  >
    <span
      className="pin__chip"
      style={
        Object {
          "background": "rgb(0,0,0)",
        }
      }
    />
    <div
      className="pin__name-wrapper"
    >
      <span
        className="pin__copy pin__name"
      >
        Heartthrob
      </span>
      <span
        className="pin__copy pin__number"
      >
        SW 
        6866
      </span>
    </div>
  </button>
</Fragment>
`;

exports[`colorsFromImagePin with props should match snapshot 1`] = `
<Fragment>
  <button
    className="pin--preview__wrapper pin__wrapper "
    onClick={[MockFunction]}
    style={
      Object {
        "transform": "translate(0px, 0px)",
      }
    }
  >
    <span
      className="pin__chip"
      style={
        Object {
          "background": "rgb(0,0,0)",
        }
      }
    />
    <div
      className="pin__name-wrapper"
    >
      <span
        className="pin__copy pin__name"
      />
      <span
        className="pin__copy pin__number"
      >
        SW 
      </span>
    </div>
  </button>
</Fragment>
`;
